--- a/WebAPI.Services/WebAPI.Services.csproj
+++ b/WebAPI.Services/WebAPI.Services.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WebAPI.Data\WebAPI.Data.csproj" />
+    <ProjectReference Include="..\WebAPI.Models\WebAPI.Models.csproj" />
+  </ItemGroup>
+
 </Project>
